--- a/bonus-details.html
+++ b/bonus-details.html
@@ -656,13 +656,16 @@
         <div class="col-md-6">
           <div class="common-heading-area ">
             <h2>Bonus Terms & Conditions</h2>
-            <ul class="bonus-terms-condition-option d-flex flex-column g-15 text-start">
-              <li>Bonus is <b>only for trading,</b> not withdrawable.</li>
-              <li><b>Profits can be withdrawn,</b> but if any withdrawal is made,<b> bonus will be removed.</b></li>
-              <li> <b>One</b> account per person</li>
-              <li>Abuse or misuse of the bonus will result in disqualification.</li>
+            <div class="bonus-terms-condition-option">
+              <ul>
+                <li>Bonus is <b>only for trading,</b> not withdrawable.</li>
+                <li><b>Profits can be withdrawn,</b> but if any withdrawal is made,<b> bonus will be removed.</b></li>
+                <li> <b>One</b> account per person</li>
+                <li>Abuse or misuse of the bonus will result in disqualification.</li>
 
-            </ul>
+              </ul>
+            </div>
+            
             <a href="#" class="primary-btn mt-4">Read Full Terms</a>
           </div>
         </div>
