--- a/bonus-terms-condition.html
+++ b/bonus-terms-condition.html
@@ -241,8 +241,8 @@
   <section class="common-page-heading-section gradient-bg">
     <div class="container">
       <div class="row align-items-center">
-        <div class="col-lg-6">
-          <div class="common-heading-area withdrawals-common-heading">
+        <div class="col-lg-8 offset-lg-2">
+          <div class="common-heading-area withdrawals-common-heading text-center">
             <h1>
               Tradable Bonus on Deposit Campaign
 
@@ -250,15 +250,15 @@
 
           </div>
 
-          <div class="common-heading-area withdrawals-common-heading ">
+          <div class="common-heading-area withdrawals-common-heading text-center">
             <p class="text-white">Campaign Period</p>
             <h1><span class="span-color">1st July 2025 </span> to <span class="span-color">31st July 2025</span></h1>
           </div>
         </div>
-        <div class="col-lg-6">
+        <!-- <div class="col-lg-6">
           <div class="common-page-thumbnails md-mt-50">
             <img src="assets/images/thumbnails/bonus-4.png" alt="img" class="w-100 rounded" />
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
