Fix: Bonus section button hover fix

--- a/index.html
+++ b/index.html
@@ -1745,7 +1745,7 @@
                       </p>
                     </div>
 
-                    <div class="text-center text-lg-start">
+                    <div class="text-center">
                       <a href="bonus-details.html" class="primary-btn"
                         >See Details</a
                       >
@@ -1785,7 +1785,7 @@
                       </p>
                     </div>
 
-                    <div class="text-center text-lg-start">
+                    <div class="text-center">
                       <a href="bonus-details.html" class="primary-btn"
                         >See Details</a
                       >
@@ -1825,7 +1825,7 @@
                       </p>
                     </div>
 
-                    <div class="text-center text-lg-start">
+                    <div class="text-center">
                       <a href="bonus-details.html" class="primary-btn"
                         >See Details</a
                       >
