Fix: term conditions page hero title full width

--- a/tradable-terms-condition.html
+++ b/tradable-terms-condition.html
@@ -241,7 +241,7 @@
   <section class="common-page-heading-section gradient-bg">
     <div class="container">
       <div class="row align-items-center">
-        <div class="col-lg-8 offset-lg-2">
+        <div class="col-lg-12">
           <div class="common-heading-area withdrawals-common-heading text-center">
             <h1>
                AndroMarkets - 100% Tradable Bonus on Deposit 
