Fix: add sup in deadline text

--- a/bonus-tradeable.html
+++ b/bonus-tradeable.html
@@ -269,7 +269,7 @@
           <div
             class="common-heading-area withdrawals-common-heading d-flex align-items-center g-10 justify-content-center justify-content-lg-start w-100">
             <p class="text-white d-inline-block">Campaign Period:</p>
-            <h1 class="d-inline-block bonus-deadline-text">14th Jul – 14th Aug 2025</h1>
+            <h1 class="d-inline-block bonus-deadline-text">14<sup>th</sup> Jul – 14<sup>th</sup> Aug 2025</h1>
           </div>
         </div>
         <div class="col-lg-6">
