--- a/bonus-campaign-list.html
+++ b/bonus-campaign-list.html
@@ -334,7 +334,7 @@
             </div>
           </div>
           <div class="col-lg-6">
-            <div class="common-page-thumbnails md-mt-50">
+            <div class="common-page-thumbnails md-mt-50 text-lg-center">
               <img
                 src="assets/images/thumbnails/bonus-campaign-list.png"
                 alt="img"
