--- a/bonus-details.html
+++ b/bonus-details.html
@@ -563,12 +563,16 @@
       <div class="row">
         <div class="col-md-12">
           <div class="terms-condition-box mt-4">
-            <div class="alert-note d-flex align-items-center justify-content-between flex-wrap">
+            <div class="alert-note d-flex align-items-center justify-content-between flex-wrap g-10">
               <p class="d-flex align-items-center g-10">
                 <i class="fa-solid fa-circle-exclamation primary-color"></i>
                 <span><b>Note:</b> Winners will be notified via email and official social media pages.</span>
               </p>
-              <a href="#" class="terms-condition-btn">Terms & Conditions</a>
+              <ul class="d-flex align-items-center g-10 justify-content-center justify-content-md-start">
+                <li><a href="https://devx.andromarkets.com/faq-campaign-100" class="terms-condition-btn">FAQ</a>
+              </li>
+              <li><a href="#" class="terms-condition-btn">Terms & Conditions</a></li>
+              </ul>
             </div>
           </div>
         </div>
