--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                         </div>
                       </div>
                       <!-- end col-3 -->
-                      <div class="col-lg-3 col-md-6">
+                      <!-- <div class="col-lg-4 col-md-6">
                         <div class="col-megamenu border-0">
                           <h6>Assets</h6>
                           <ul>
@@ -208,17 +208,37 @@
                             <li><a href="#">Shares</a></li>
                           </ul>
                         </div>
-                      </div>
-                      <div class="col-lg-3 col-md-6">
+                      </div> -->
+                      <div class="col-lg-6 col-md-12">
                         <div class="col-megamenu border-0">
                           <h6>Promotions & Bonuses</h6>
-                          <ul>
+                          <!-- <ul>
                             <li>
                               <a href="#" class="glow-on-hover d-flex">
                                 Bonuses</a
                               >
                             </li>
-                          </ul>
+                          </ul> -->
+                          <div class="promotions-bonus-area">
+                            <div class="row align-items-center">
+                              <div class="col-md-6">
+                                <div class="promotions-bonus-content">
+                                  <h5>Unlock a 100% Tradable Sonus with
+                                    AndroMarkets!</h5>
+                                  <p>Get up to a 100% bonus on your trading funds and maximize your profit potential. Boost your balance </p>
+                                </div>
+                              </div>
+                              <div class="col-md-6">
+                                <div class="promotions-bonus-thumbnails">
+                                  <img src="assets/images/bonus/promotion-bouns.png" alt="img" class="w-100">
+                                </div>
+                              </div>
+                              
+                            </div>
+                          </div>
+                          <div class="mt-30">
+                            <a href="https://andromarkets.com/bonus" class="primary-btn">View all Bonuses</a>
+                          </div>
                         </div>
                       </div>
                     </div>
