--- a/index.html
+++ b/index.html
@@ -220,24 +220,39 @@
                             </li>
                           </ul> -->
                           <div class="promotions-bonus-area">
-                            <div class="row align-items-center">
-                              <div class="col-md-6">
-                                <div class="promotions-bonus-content">
-                                  <h5>Unlock a 100% Tradable Sonus with
-                                    AndroMarkets!</h5>
-                                  <p>Get up to a 100% bonus on your trading funds and maximize your profit potential. Boost your balance </p>
+                            <a href="https://andromarkets.com/bonus">
+                              <div class="row align-items-center">
+                                <div class="col-md-6">
+                                  <div class="promotions-bonus-content">
+                                    <h5>
+                                      Unlock a 100% Tradable Sonus with
+                                      AndroMarkets!
+                                    </h5>
+                                    <p>
+                                      Get up to a 100% bonus on your trading
+                                      funds and maximize your profit potential.
+                                      Boost your balance
+                                    </p>
+                                  </div>
+                                </div>
+                                <div class="col-md-6">
+                                  <div class="promotions-bonus-thumbnails">
+                                    <img
+                                      src="assets/images/bonus/promotion-bouns.png"
+                                      alt="img"
+                                      class="w-100"
+                                    />
+                                  </div>
                                 </div>
                               </div>
-                              <div class="col-md-6">
-                                <div class="promotions-bonus-thumbnails">
-                                  <img src="assets/images/bonus/promotion-bouns.png" alt="img" class="w-100">
-                                </div>
-                              </div>
-                              
-                            </div>
+                            </a>
                           </div>
                           <div class="mt-30">
-                            <a href="https://andromarkets.com/bonus" class="primary-btn">View all Bonuses</a>
+                            <a
+                              href="https://andromarkets.com/bonus"
+                              class="primary-btn"
+                              >View all Bonuses</a
+                            >
                           </div>
                         </div>
                       </div>
